ongoing
-------

- Fix: fix unrelated strings.


1.4.0
-----
2022-04-21

- Add: NBPC_HTML kses helper methods.
- Fix: NBPC_HTML methods now do not support echo outputs.
- Fix: NBPC_Submodule_Impl:touch()'s visibility changes from protected to public.


1.4.0-beta.2
------------
2022-04-20

- Add: Front fallback module.
- Fix: Better front module setup process.
- Fix: Template_Impl::render() cannot find template file when used for themes. (Issue #66)
- Fix: Force update 'autoload=no' options won't work for newly added options. (Issue #67)


1.4.0-beta.1
------------
2022-03-18

- Add: Theme support.
- Add: Dynamic loading of admin modules.


1.3.4
-----
2022-03-15

- Fix: Force update 'autoload=no' options. (Issue #63)
- Fix: Submenu removal. (Issue #62)


1.3.3
-----
2022-02-17

- Fix: Make_Zip class code update
  - 'node_modules', and 'bin' directories are excluded.
  -  Code improvement.
- Apply WordPress coding standard to PHP scripts.


1.3.2
-----
2022-02-15

- Mod: NBPC_Template_Impl::render_file() protects accessing class' object variables from template code.
- Fix: wc-ajax callback was not called properly (Issue #61).
- Fix: prefix-change.php now accepts uppercase letters entered via standard input (Issue #60).


1.3.1
-----
2022-01-16

- Mod: Update composer 'post-create-project-cmd' command.
- Mod: Update README.md.
- Fix: NBPC_Main class typo.


1.3.0
-----
2022-01-16

- Add: Very simple dependency injector.
- Add: NBPC_Hook_Impl::add_action_once(), NBPC_Hook_Impl::add_filter_once() are added.
- Add: make-zip script.
- Mod: NBPC_Main_Base::init_conditional_modules() is removed. Implement it in NBPC_Main when it is needed.
- Mod: The seconds parameters of NBPC_Hook_Impl::add_action(), and NBPC_Hook_Impl::add_filter() may be omitted.
- Mod: NBPC_Submodule_Impl::assign_modules() returns self.


1.2.7
-----
2022-01-14

- Fix: better type hint when method chaining NBPC_Script_Helper::then() with NBPC_Template_Impl::render().